@startuml
left to right direction
skinparam shadowing false
skinparam classAttributeIconSize 0
skinparam nodesep 40
skinparam ranksep 45
hide empty methods
hide circle

title Diagramme de classes 1/3 : Organisation et comptes

class PlatformAdmin {
  id
  identifier
  email
  firstName
  lastName
  passwordHash
  isActive
  lastLoginAt
}

class SubscriptionPlan {
  id
  code
  name
  maxTeachers
  maxStudents
  maxExamsPerMonth
  priceMin
  priceMax
  currency
  features
  isActive
}

class Establishment {
  id
  name
  acronym
  type
  country
  city
  timezone
  officialEmail
  phone
  isActive
  onboardingCompletedAt
}

class EstablishmentSubscription {
  id
  establishmentId
  planId
  status
  isSimulated
  trialEndsAt
  startedAt
  currentPeriodEnd
}

class AcademicYear {
  id
  establishmentId
  label
  startDate
  endDate
  isActive
  isArchived
}

class Class {
  id
  establishmentId
  name
  track
  level
  isArchived
}

class User {
  id
  establishmentId
  identifier
  role
  email
  firstName
  lastName
  passwordHash
  mustChangePassword
  isActive
  lastLoginAt
}

class AdminProfile {
  userId
  function
}

class TeacherProfile {
  userId
  subjects
  function
}

class StudentProfile {
  userId
  matricule
  classId
  academicYearId
}

class AdminActivityLog {
  id
  establishmentId
  actorUserId
  action
  entityType
  entityId
  oldValue
  newValue
  ipAddress
  createdAt
}

PlatformAdmin "1" -- "0..*" Establishment : "administre"
SubscriptionPlan "1" -- "0..*" EstablishmentSubscription : "définit"
Establishment "1" -- "0..*" EstablishmentSubscription : "souscrit"
Establishment "1" -- "0..*" AcademicYear : "organise"
Establishment "1" -- "0..*" Class : "regroupe"
Establishment "1" -- "0..*" User : "emploie"
Establishment "1" -- "0..*" AdminActivityLog : "journalise"
User "1" -- "0..1" AdminProfile : "a pour profil"
User "1" -- "0..1" TeacherProfile : "a pour profil"
User "1" -- "0..1" StudentProfile : "a pour profil"
User "0..1" -- "0..*" AdminActivityLog : "réalise"
Class "1" -- "0..*" StudentProfile : "accueille"
AcademicYear "1" -- "0..*" StudentProfile : "concerne"

@enduml
